...
                        RoundedRectangle(cornerRadius: 20)
                            .stroke(Color.gray.opacity(0.3), lineWidth: 0.5)
                    )
                    .onSubmit(onSubmit)
                    .disabled(isThinking || modelOptions.isEmpty)
                    .focused($isTextFieldFocused)
                    .accessibilityIdentifier("chatInputTextField")
                if isThinking {Button(action: {
                    onCancel()
                }) {
                    Image(systemName: "octagon.fill")
                        .resizable()
                        .scaledToFit()
                        .frame(height: 30)
                        .foregroundColor(.red)
                }
                .buttonStyle(PlainButtonStyle())
                .keyboardShortcut(.escape, modifiers: [])
                .accessibilityIdentifier("cancelStreamingButton")
                }
            }
            .padding(.horizontal)
        }
    }
}
...
